# Knowledge_RAG

bid_knowledge_rag/: README.md  config.yaml  main.py  md_to_knowledge_base.py  pyproject.toml  接口文档.md  数据结构.md  知识库要求.md
bid_knowledge_rag/api/: __init__.py  main.py
bid_knowledge_rag/api/routes/: __init__.py  knowledge.py  search.py
bid_knowledge_rag/config/: __init__.py  settings.py  tag_system.py
bid_knowledge_rag/models/: __init__.py  api.py  knowledge.py
bid_knowledge_rag/services/: __init__.py  embedding.py  knowledge_service.py  llm.py
bid_knowledge_rag/storage/: __init__.py  es_store.py
