[project]
name = "bid-knowledge-rag"
version = "0.1.0"
description = "投标知识库 - 基于 Elasticsearch 的知识图谱增强 RAG 系统"
authors = [{name = "Bid Team"}]
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    # 数据验证
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Elasticsearch
    "elasticsearch>=8.11.0",
    # AI 服务
    "sentence-transformers>=2.3.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.26.0",
    # 文档处理
    "python-multipart>=0.0.6",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "pdfplumber>=0.10.3",
    "rapidocr-onnxruntime>=1.3.0",
    # 工具库
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
